argocd/base/resources/keycloak/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - auth.cluster.local
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: keycloak-service
          port: 8080
